[project]
name = "formation-lap"
version = "0.1.0"
description = "F1 data app monorepo"
requires-python = ">=3.12"

[tool.uv]
python-preference = "only-managed"

[tool.uv.workspace]
members = ["packages/data", "packages/api"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["analysis"]
